personal image sizing fixed on mobile

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -51,10 +51,10 @@
     font-size: 1.2rem;
 }
 
-.imagery {
+/* .imagery {
     flex: 1;
     width: 50%;
-}
+} */
 
 .imagery img {
     height: 350px;
@@ -167,8 +167,8 @@
     }
 
     .imagery img {
-        height: 350px;
-        width: 300px;
+        height: 300px !important;
+        width: 250px !important;
     }
     
     .main-container {
